--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 ul,
 input,
 select,
 textarea {
   @apply outline-none;
+}
+
+.list-image-wrap {
+  perspective: 50px;
+}
+
+.list-image-wrap .image-placeholder {
+  transform: translateX(-50%) translateY(-50%) rotateX(25deg);
+}
+
+.list-char:hover .ambient-light:before,
+.list-char:hover .ambient-light:after {
+  box-shadow: 0px 0px 4px 1px #c6ecfa;
+  background: #fff;
 }
